# volt

./: .gitignore  Cargo.toml  README.md  justfile  package-lock.json
assets/: index.html  script.js
client/: index.html  package-lock.json  package.json  tsconfig.app.json  vite-env.d.ts
client/src/: App.tsx  App.vue  env.ts  index.css  main.tsx  style.css  types.ts  vite-env.d.ts
client/src/components/: ChatClient.vue  ChatHeader.tsx  ChatLayout.vue  ChatProvider.tsx  ChatSidebar.vue  ChatWindow.tsx  ChatWindow.vue  ConversationList.tsx  ConversationListItem.tsx  ConversationSidebar.tsx  EmptyState.tsx  Log.vue  MessageBubble.tsx  MessageInput.tsx  MessageList.tsx  UserSearchDialog.tsx  WebSocketProvider.tsx  app-layout.tsx  app-sidebar.tsx  nav-user.tsx  onboarding.tsx  sign-in.tsx  sign-up.tsx
client/src/components/chat/: ChatHeader.vue  ConversationItem.tsx  ConversationList.tsx  Message.tsx  MessageBubble.vue  MessageInput.tsx  MessageInput.vue  MessageItem.tsx  MessageList.tsx  MessageList.vue  NewConversationDialog.tsx
client/src/components/common/: Avatar.vue  EmptyState.vue
client/src/components/sidebar/: ChatList.vue  ChatListItem.vue  SidebarHeader.vue  UserSearchInput.vue
client/src/components/ui/: sidebar.tsx
client/src/contexts/: ChatContext.tsx  WebSocketContext.tsx
client/src/data/: dummy.ts
client/src/hooks/: use-local-identity.ts
client/src/lib/: dateUtils.ts  env.ts  mockUsers.ts
client/src/pages/: ChatPage.tsx  LoginPage.tsx  sign-in.tsx  sign-up.tsx
client/src/services/: api.ts  chatService.ts  userService.ts  ws.ts
client/src/stores/: authStore.ts  chatStore.ts  conversationStore.ts  messageStore.ts  userSearchStore.ts  webSocketStore.ts
client/src/types/: conversation.ts  index.ts  log.ts  message.ts  user.ts
server/: Cargo.toml
server/migrations/: 20251222020714_create_tables.sql
server/src/: config.rs  domain.rs  dto.rs  errors.rs  handlers.rs  infrastructure.rs  lib.rs  main.rs  models.rs  repositories.rs  routes.rs
server/src/application/: commands.rs  queries.rs
server/src/application/commands/: create_conversation.rs  create_user.rs  edit_message.rs  leave_conversation.rs  mark_message_read.rs  send_message.rs
server/src/application/queries/: conversation_list.rs  message_history.rs
server/src/domain/: conversation.rs  errors.rs  events.rs  ids.rs  message.rs  repository.rs  user.rs
server/src/dto/: conversation.rs  mesagge.rs  pagination.rs  user.rs  user_conversation.rs
server/src/handlers/: chat.rs  conversation.rs  messages.rs  upload.rs  user.rs  websocket.rs
server/src/infrastructure/: postgres.rs  projections.rs
server/src/infrastructure/events/: bus.rs
server/src/infrastructure/postgres/: conversation_repository.rs  message_repository.rs  queries.rs  user_repository.rs
server/src/infrastructure/projections/: conversation_summary.rs  last_message.rs
server/src/infrastructure/websocket/: hub.rs
server/src/repositories/: conversation.rs  message.rs  participant.rs  user.rs
server/src/routes/: conversation.rs  messages.rs  websocket.rs
src/: config.rs  error.rs  lib.rs  main.rs  models.rs
src/handlers/: chat.rs  conversation.rs  websocket.rs
