[package]
name = "volt"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws", "http2", "multipart"] }
async-trait = "0.1.89"
tokio = { version = "1.49", features = ["full"] }
tower = { version = "0.5.3", features = ["util", "timeout"] }
tower-http = { version = "0.6.1", features = ["fs", "trace", "add-extension", "cors"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.19.0", features = ["v7", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
sqlx = {version = "0.8.6", features = ["chrono", "uuid", "postgres", "runtime-tokio-rustls", "json", "macros", "migrate", "derive"]}
thiserror = "2.0.18"
anyhow = "1.0.100"
validator = { version = "0.20.0", features = ["derive"] }
dotenvy = "0.15.7"
clerk-rs = { version = "0.4.2", features = ["axum"] }
secrecy = "0.10.3"
