[package]
name = "volt"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["ws", "http2", "multipart"] }
async-trait = "0.1.89"
tokio = { version = "1.52.3", features = ["full"] }
tower = { version = "0.5.3", features = ["util", "timeout"] }
tower-http = { version = "0.7.0", features = ["fs", "trace", "add-extension", "cors"] }
futures-util = { version = "0.3.32", default-features = false, features = ["sink", "std"] }
headers = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.4", features = ["v7", "serde"] }
chrono = { version = "0.4.45", features = ["serde"] }
sqlx = {version = "0.9.0", features = ["chrono", "uuid", "postgres", "runtime-tokio", "tls-rustls", "json", "macros", "migrate", "derive"]}
thiserror = "2.0.18"
anyhow = "1.0.103"
validator = { version = "0.20.0", features = ["derive"] }
dotenvy = "0.15.7"
clerk-rs = { version = "0.4.2", features = ["axum"] }
secrecy = "0.10.3"
getset = "0.1.7"
